add hypothesis testing 1 - b

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -86,7 +86,7 @@
     "### Hypothesis Testing 1\n",
     "\n",
     "- [x] Apa rata-rata penjualan minuman beralkohol (dalam volume / column `volume_sold_liters`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda (lebih kecil/lebih besar)?\n",
-    "- [ ] Apa rata-rata penjualan minuman beralkohol (dalam total harga / column `sale_dollars`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda?\n",
+    "- [x] Apa rata-rata penjualan minuman beralkohol (dalam total harga / column `sale_dollars`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda?\n",
     "\n",
     "### Hypothesis Testing 2\n",
     "\n",
@@ -7483,12 +7483,12 @@
     "\n",
     "We will reject null hypothesis if p-value is below 1%.\n",
     "\n",
-    "Since our p-value is less than 0.05, so we reject the null hypothesis and we can conclude (with 99% confidence) that, the mean in volume sold liters in January 2018 and January 2022 is different."
+    "Since our p-value is less than 0.05, so we reject the null hypothesis and we can conclude with 99% confidence that, the average sales in terms of volume sold liters in January 2018 and January 2022 is different."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -7500,11 +7500,14 @@
     }
    ],
    "source": [
-    "series_1_2018 = df6.loc[(df6['year'] == 2018) & (df6['month'] == 1),'volume_sold_liters']\n",
-    "series_1_2022 = df6.loc[(df6['year'] == 2022) & (df6['month'] == 1),'volume_sold_liters']\n",
+    "def hypothesis_testing_two_sample_volume_sold_liters_unequal():\n",
+    "    series_1_2018 = df6.loc[(df6['year'] == 2018) & (df6['month'] == 1),'volume_sold_liters']\n",
+    "    series_1_2022 = df6.loc[(df6['year'] == 2022) & (df6['month'] == 1),'volume_sold_liters']\n",
     "\n",
-    "t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022)\n",
-    "print(\"p-value {:.2f}\".format(p_val))"
+    "    t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022)\n",
+    "    print(\"p-value {:.2f}\".format(p_val))\n",
+    "\n",
+    "hypothesis_testing_two_sample_volume_sold_liters_unequal()"
    ]
   },
   {
@@ -7519,12 +7522,12 @@
     "\n",
     "We will reject null hypothesis if p-value is below 0.5%.\n",
     "\n",
-    "Based on the result below, we can conclude (with 99% confidence) that we fail to reject the null hypothesis which means the average sales in terms of volume sold liters in January 2018 is more than equal to January 2022."
+    "Based on the result below, we can conclude with 99% confidence that we fail to reject the null hypothesis which means the average sales in terms of volume sold liters in January 2018 is more than equal compared to January 2022."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -7536,11 +7539,92 @@
     }
    ],
    "source": [
-    "series_1_2018 = df6.loc[(df6['year'] == 2018) & (df6['month'] == 1),'volume_sold_liters']\n",
-    "series_1_2022 = df6.loc[(df6['year'] == 2022) & (df6['month'] == 1),'volume_sold_liters']\n",
+    "def hypothesis_testing_two_sample_volume_sold_liters_less():\n",
+    "    series_1_2018 = df6.loc[(df6['year'] == 2018) & (df6['month'] == 1),'volume_sold_liters']\n",
+    "    series_1_2022 = df6.loc[(df6['year'] == 2022) & (df6['month'] == 1),'volume_sold_liters']\n",
     "\n",
-    "t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022, alternative=\"less\")\n",
-    "print(\"p-value {:.2f}\".format(p_val))"
+    "    t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022, alternative=\"less\")\n",
+    "    print(\"p-value {:.2f}\".format(p_val))\n",
+    "\n",
+    "hypothesis_testing_two_sample_volume_sold_liters_less()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rata-rata penjualan minuman beralkohol dalam total harga di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 berbeda\n",
+    "\n",
+    "H0: μ(2018, sale_dollars) = μ(2022, sale_dollars)\n",
+    "\n",
+    "H1: μ(2018, sale_dollars) != μ(2022, sale_dollars)\n",
+    "\n",
+    "We will reject null hypothesis if p-value is below 0.5%.\n",
+    "\n",
+    "Since our p-value is less than 0.05, so we reject the null hypothesis and we can conclude with 99% confidence that, the average sales in terms of dollars in January 2018 and January 2022 is different."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value 0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hypothesis_testing_two_sample_sale_dollars_unequal():\n",
+    "    series_1_2018 = df6.loc[(df6['year'] == 2018) & (df6['month'] == 1),'sale_dollars']\n",
+    "    series_1_2022 = df6.loc[(df6['year'] == 2022) & (df6['month'] == 1),'sale_dollars']\n",
+    "\n",
+    "    t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022, alternative=\"less\")\n",
+    "    print(\"p-value {:.2f}\".format(p_val))\n",
+    "\n",
+    "hypothesis_testing_two_sample_sale_dollars_unequal()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rata-rata penjualan minuman beralkohol dalam total harga di Iowa, Amerika Serikat pada bulan Januari 2018 lebih kecil daripada Januari 2022\n",
+    "\n",
+    "H0: μ(2018, sale_dollars) <= μ(2022, sale_dollars)\n",
+    "\n",
+    "H1: μ(2018, sale_dollars) > μ(2022, sale_dollars)\n",
+    "\n",
+    "We will reject null hypothesis if p-value is below 0.5%.\n",
+    "\n",
+    "Based on the result below, we can conclude with 99% confidence that we fail to reject the null hypothesis which means the average sales in terms of dollars in January 2018 is less than equal compared to January 2022."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hypothesis_testing_two_sample_sale_dollars_greater():\n",
+    "    series_1_2018 = df6.loc[(df6['year'] == 2018) & (df6['month'] == 1),'sale_dollars']\n",
+    "    series_1_2022 = df6.loc[(df6['year'] == 2022) & (df6['month'] == 1),'sale_dollars']\n",
+    "\n",
+    "    t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022, alternative=\"greater\")\n",
+    "    print(\"p-value {:.2f}\".format(p_val))\n",
+    "\n",
+    "hypothesis_testing_two_sample_sale_dollars_greater()"
    ]
   },
   {
