--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -90,12 +90,7 @@
     "\n",
     "### Hypothesis Testing 2\n",
     "\n",
-    "- [ ] Apa rata-rata harga minuman beralkohol (column `state_bottle_retail`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda?\n",
-    "\n",
-    "### Dugaan Penyebab Perbedaan Rata-rata Penjualan Minuman Beralkohol pada bulan Januari 2018 dan 2022\n",
-    "\n",
-    "- [ ] Apa korelasi harga minimuman beralkohol (column `state_bottle_retail`) dengan jumlah botol terjual (column `bottles_sold`) di Iowa Amerika Serikat pada bulan Januari 2018 dan 2022?\n",
-    "- [ ] Apa minuman beralkohol dijual (column `state_bottle_retail`) dibawah biaya produksi (`state_bottle_cost`) di Iowa Amerika Serikat pada bulan Januari 2018 dan 2022?"
+    "- [x] Apa rata-rata harga minuman beralkohol (column `state_bottle_retail`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda?"
    ]
   },
   {
@@ -7483,7 +7478,7 @@
     "\n",
     "We will reject null hypothesis if p-value is below 1%.\n",
     "\n",
-    "Since our p-value is less than 0.05, so we reject the null hypothesis and we can conclude with 99% confidence that, the average sales in terms of volume sold liters in January 2018 and January 2022 is different."
+    "Since our p-value is less than 0.5%, so we reject the null hypothesis and we can conclude with 99% confidence that, the average sales in terms of volume sold liters in January 2018 and January 2022 is different."
    ]
   },
   {
@@ -7514,7 +7509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rata-rata penjualan minuman beralkohol dalam volume in Iowa, Amerika Serikat pada bulan Januari 2018 lebih besar daripada Januari 2022\n",
+    "#### Rata-rata penjualan minuman beralkohol dalam volume in Iowa, Amerika Serikat pada bulan Januari 2018 lebih besar daripada Januari 2022\n",
     "\n",
     "H0: μ(2018, volume_sold_liters) >= μ(2022, volume_sold_liters)\n",
     "\n",
@@ -7561,12 +7556,12 @@
     "\n",
     "We will reject null hypothesis if p-value is below 0.5%.\n",
     "\n",
-    "Since our p-value is less than 0.05, so we reject the null hypothesis and we can conclude with 99% confidence that, the average sales in terms of dollars in January 2018 and January 2022 is different."
+    "Since our p-value is less than 0.5%, so we reject the null hypothesis and we can conclude with 99% confidence that, the average sales in terms of dollars in January 2018 and January 2022 is different."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -7582,7 +7577,7 @@
     "    series_1_2018 = df6.loc[(df6['year'] == 2018) & (df6['month'] == 1),'sale_dollars']\n",
     "    series_1_2022 = df6.loc[(df6['year'] == 2022) & (df6['month'] == 1),'sale_dollars']\n",
     "\n",
-    "    t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022, alternative=\"less\")\n",
+    "    t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022)\n",
     "    print(\"p-value {:.2f}\".format(p_val))\n",
     "\n",
     "hypothesis_testing_two_sample_sale_dollars_unequal()"
@@ -7592,7 +7587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rata-rata penjualan minuman beralkohol dalam total harga di Iowa, Amerika Serikat pada bulan Januari 2018 lebih kecil daripada Januari 2022\n",
+    "#### Rata-rata penjualan minuman beralkohol dalam total harga di Iowa, Amerika Serikat pada bulan Januari 2018 lebih kecil daripada Januari 2022\n",
     "\n",
     "H0: μ(2018, sale_dollars) <= μ(2022, sale_dollars)\n",
     "\n",
@@ -7605,7 +7600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -7625,6 +7620,84 @@
     "    print(\"p-value {:.2f}\".format(p_val))\n",
     "\n",
     "hypothesis_testing_two_sample_sale_dollars_greater()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rata-rata harga minuman beralkohol di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 berbeda.\n",
+    "\n",
+    "H0: μ(2018, state_bottle_retail) = μ(2022, state_bottle_retail)\n",
+    "\n",
+    "H1: μ(2018, state_bottle_retail) != μ(2022, state_bottle_retail)\n",
+    "\n",
+    "We will reject null hypothesis if p-value is below 1%.\n",
+    "\n",
+    "Since our p-value is less than 1%, so we reject the null hypothesis and we can conclude with 99% confidence that, the average bottle retail price in January 2018 and January 2022 is different."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value 0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hypothesis_testing_two_sample_state_bottle_retail_unequal():\n",
+    "    series_1_2018 = df6.loc[(df6['year'] == 2018) & (df6['month'] == 1), 'state_bottle_retail']\n",
+    "    series_1_2022 = df6.loc[(df6['year'] == 2022) & (df6['month'] == 1), 'state_bottle_retail']\n",
+    "\n",
+    "    t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022)\n",
+    "    print(\"p-value {:.2f}\".format(p_val))\n",
+    "\n",
+    "hypothesis_testing_two_sample_state_bottle_retail_unequal()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Rata-rata harga minuman beralkohol di Iowa, Amerika Serikat pada bulan Januari 2018 lebih rendah daripada 2022.\n",
+    "\n",
+    "H0: μ(2018, state_bottle_retail) >= μ(2022, state_bottle_retail)\n",
+    "\n",
+    "H1: μ(2018, state_bottle_retail) < μ(2022, state_bottle_retail)\n",
+    "\n",
+    "We will reject null hypothesis if p-value is below 0.5%.\n",
+    "\n",
+    "Since our p-value is less than 0.5, so we reject the null hypothesis and we can conclude with 99% confidence that, the average bottle retail price in January 2018 is less than equal compared to January 2022."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value 0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hypothesis_testing_two_sample_state_bottle_retail_less():\n",
+    "    series_1_2018 = df6.loc[(df6['year'] == 2018) & (df6['month'] == 1), 'state_bottle_retail']\n",
+    "    series_1_2022 = df6.loc[(df6['year'] == 2022) & (df6['month'] == 1), 'state_bottle_retail']\n",
+    "\n",
+    "    t_stat, p_val = stats.ttest_ind(series_1_2018, series_1_2022, alternative='less')\n",
+    "    print(\"p-value {:.2f}\".format(p_val))\n",
+    "\n",
+    "hypothesis_testing_two_sample_state_bottle_retail_unequal()"
    ]
   },
   {
