pemisahan markdown untuk memudahkan pindah outline

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -62,8 +62,13 @@
    "source": [
     "## Penjabaran Masalah\n",
     "\n",
-    "#TODO penjabaran masalah\n",
-    "\n",
+    "#TODO penjabaran masalah"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Visualisasi\n",
     "\n",
     "Tujuan: mencari kota terbaik untuk menjual minuman beralkohol\n",
@@ -74,8 +79,13 @@
     "Tujuan: menentukan ukuran botol dan kategori minuman beralkohol yang harus distok\n",
     "\n",
     "- [x] Apa ukuran botol (column `bottle_volume_ml`) minuman beralkohol yang paling banyak terjual (column `bottles_sold`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022?\n",
-    "- [x] Apa kategori (column `category_name`) minuman beralkohol yang paling banyak terjual (column `bottles_sold`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022?\n",
-    "\n",
+    "- [x] Apa kategori (column `category_name`) minuman beralkohol yang paling banyak terjual (column `bottles_sold`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Statistik Deskriptif\n",
     "\n",
     "Tujuan: membuat promo **Min. Jumlah Volume** dan **Min. Belanja**\n",
@@ -85,13 +95,23 @@
     "\n",
     "Tujuan: mengetahui nilai GMV minuman beralkohol di Iowa, Amerika Serikat\n",
     "\n",
-    "- [x] Berapa GMV minuman beralkohol di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022?\n",
-    "\n",
+    "- [x] Berapa GMV minuman beralkohol di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Hypothesis Testing 1\n",
     "\n",
     "- [x] Apa rata-rata penjualan minuman beralkohol (dalam volume / column `volume_sold_liters`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda (lebih kecil/lebih besar)?\n",
-    "- [x] Apa rata-rata penjualan minuman beralkohol (dalam total harga / column `sale_dollars`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda?\n",
-    "\n",
+    "- [x] Apa rata-rata penjualan minuman beralkohol (dalam total harga / column `sale_dollars`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Hypothesis Testing 2\n",
     "\n",
     "- [x] Apa rata-rata harga minuman beralkohol (column `state_bottle_retail`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2022 sama/berbeda?"
