rapihkan sub bab

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -8540,7 +8540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rata-rata penjualan minuman beralkohol per transaksi pada bulan Januari 2018 lebih kecil daripada 2022.\n",
+    "#### Rata-rata penjualan minuman beralkohol per transaksi pada bulan Januari 2018 lebih kecil daripada 2022.\n",
     "\n",
     "H0: μ(2018, sale_dollars) <= μ(2022, sale_dollars)\n",
     "\n",
