--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -8683,12 +8683,6 @@
    "source": [
     "## Rekomendasi\n",
     "\n",
-    "Jika perusahaan membuka toko pada tahun 2022 (bukan tahun 2023, prediksi bukan scope dari Data Analyst saat ini), rekomendasi Data Analyst adalah sebagai berikut:\n",
-    "1. Kota yang perusahaan harus pilih adalah Des Moines jika ingin berada pada 8.55% pasar.\n",
-    "2. Ukuran botol minuman beralkohol yang harus disediakan perusahaan adalah 750 ml, 1750 ml, 375 ml dan 1000 ml jika ingin melayani 89.23% pasar.\n",
-    "3. Kategori minuman beralkohol yang harus disediakan perusahaan adalah American Vodkas, Canadian Whiskies, Spiced Rum, Straight Bourbon Whiskies, dan Whieskey Liquer jika ingin melayani 49.2% pasar.\n",
-    "4. Promo yang harus dijalankan untuk menarik pelanggan dari kompetitor adalah \"Min. Belanja $100\" atau \"Min. Volume 6 Liter\"\n",
-    "\n",
     "Jika perusahaan mengikuti rekomendasi Data Analyst, maka perusahaan melayani pasar dengan nilai sebesar $679,000 pada bulan Januari 2022.\n",
     "\n",
     "Nilai pasar dihitung sebagai berikut:\n",
@@ -8697,7 +8691,16 @@
     "* pangsa pasar yang dilayani, yaitu kota Des Moines \n",
     "* pangsa pasar yang dilayani berdasarkan ukuran botol minuman beralkohol \n",
     "* pangsa pasar yang dilayani berdasarkan kategori minuman beralkohol\n",
-    "```"
+    "```\n",
+    "\n",
+    "Rekomendasi Data Analyst adalah sebagai berikut:\n",
+    "\n",
+    "Disclaimer: perusahaan membuka toko pada tahun 2022 (bukan tahun 2023, prediksi bukan scope dari Data Analyst saat ini)\n",
+    "\n",
+    "1. Kota yang perusahaan harus pilih adalah Des Moines jika ingin berada pada 8.55% pasar.\n",
+    "2. Ukuran botol minuman beralkohol yang harus disediakan perusahaan adalah 750 ml, 1750 ml, 375 ml dan 1000 ml jika ingin melayani 89.23% pasar.\n",
+    "3. Kategori minuman beralkohol yang harus disediakan perusahaan adalah American Vodkas, Canadian Whiskies, Spiced Rum, Straight Bourbon Whiskies, dan Whieskey Liquer jika ingin melayani 49.2% pasar.\n",
+    "4. Promo yang harus dijalankan untuk menarik pelanggan dari kompetitor adalah \"Min. Belanja $100\" atau \"Min. Volume 6 Liter\""
    ]
   }
  ],
