extract cleaned dataframe

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -1952,6 +1952,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df6.to_csv(\"bigquery-public-data_iowa_liquor_sales_year_2018_and_year_2022_month_1_cleaned.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
