update problem statement

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -44,7 +44,9 @@
    "source": [
     "## Problem Statement\n",
     "\n",
-    "Membuktikan Dampak (Meningkat/Berkurang/Tidak Berdampak) Pandemi Covid-19 terhadap Konsumsi Alkohol di Iowa, Amerika Serikat."
+    "Membuktikan Dampak (Meningkat/Berkurang/Tidak Berdampak) Pandemi Covid-19 terhadap Konsumsi Alkohol di Iowa, Amerika Serikat.\n",
+    "\n",
+    "Mengetahui Kota, Ukuran Botol, Kategori Minuman Beralkohol yang harus distok dan potensi nilai pasar yang dilayani."
    ]
   },
   {
@@ -53,7 +55,7 @@
    "source": [
     "## Latar Belakang\n",
     "\n",
-    "Sebagai Data Analyst yang mungkin akan bekerja di e-commerce atau franchisor convenience store, saya perlu intuisi untuk \"apa perlu menambah stok minuman beralkohol ketika terjadi krisis seperti Pandemi Covid-19\""
+    "Sebagai Data Analyst yang mungkin akan bekerja di e-commerce atau franchisor convenience store, saya perlu intuisi untuk \"apa yang harus dilakukan ketika terjadi krisis seperti Pandemi Covid-19\", \"berapa nilai GMV minuman beralkohol jika membuka toko di kota Top 1, dengan ukuran botol Top 1-5, dan kategori minuman beralkohol Top 1-5\""
    ]
   },
   {
