add january to titleg

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
           "Waterloo"
          ],
          "title": {
-          "text": "Top 5 cities by volume_sold_liters in 2018"
+          "text": "Top 5 cities by volume_sold_liters in January 2018"
          },
          "type": "pie",
          "values": [
@@ -2045,7 +2045,7 @@
           "West Des Moines"
          ],
          "title": {
-          "text": "Top 5 cities by volume_sold_liters in 2022"
+          "text": "Top 5 cities by volume_sold_liters in January 2022"
          },
          "type": "pie",
          "values": [
@@ -2908,7 +2908,7 @@
           "Waterloo"
          ],
          "title": {
-          "text": "Top 5 cities by sale_dollars in 2018"
+          "text": "Top 5 cities by sale_dollars in January 2018"
          },
          "type": "pie",
          "values": [
@@ -2940,7 +2940,7 @@
           "West Des Moines"
          ],
          "title": {
-          "text": "Top 5 cities by sale_dollars in 2022"
+          "text": "Top 5 cities by sale_dollars in January 2022"
          },
          "type": "pie",
          "values": [
@@ -3793,7 +3793,7 @@
     "                          .sum()\n",
     "        fig.add_trace(go.Pie(values=series,\n",
     "                             labels=series.index,\n",
-    "                             title=\"Top 5 cities by {0} in {1}\".format(column, year)),\n",
+    "                             title=\"Top 5 cities by {0} in January {1}\".format(column, year)),\n",
     "                      row=1, col=index+1)\n",
     "    \n",
     "    fig.show()"
@@ -3812,7 +3812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -3842,7 +3842,7 @@
           "Other"
          ],
          "title": {
-          "text": "Top 5 bottles sold by bottle_volume_ml in 2018"
+          "text": "Top 5 bottles sold by bottle_volume_ml in January 2018"
          },
          "type": "pie",
          "values": [
@@ -3874,7 +3874,7 @@
           "Other"
          ],
          "title": {
-          "text": "Top 5 bottles sold by bottle_volume_ml in 2022"
+          "text": "Top 5 bottles sold by bottle_volume_ml in January 2022"
          },
          "type": "pie",
          "values": [
@@ -4731,7 +4731,7 @@
     "                        \n",
     "        fig.add_trace(go.Pie(values=series,\n",
     "                             labels=series.index,\n",
-    "                             title=\"Top 5 bottles sold by {0} in {1}\".format(group, year)),\n",
+    "                             title=\"Top 5 bottles sold by {0} in January {1}\".format(group, year)),\n",
     "                      row=1, col=index+1)\n",
     "\n",
     "    fig.show()"
@@ -4750,7 +4750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -4780,7 +4780,7 @@
           "Whiskey Liqueur"
          ],
          "title": {
-          "text": "Top 5 bottles sold by category_name in 2018"
+          "text": "Top 5 bottles sold by category_name in January 2018"
          },
          "type": "pie",
          "values": [
@@ -4812,7 +4812,7 @@
           "Whiskey Liqueur"
          ],
          "title": {
-          "text": "Top 5 bottles sold by category_name in 2022"
+          "text": "Top 5 bottles sold by category_name in January 2022"
          },
          "type": "pie",
          "values": [
@@ -5669,7 +5669,7 @@
     "                        \n",
     "        fig.add_trace(go.Pie(values=series,\n",
     "                             labels=series.index,\n",
-    "                             title=\"Top 5 bottles sold by {0} in {1}\".format(group, year)),\n",
+    "                             title=\"Top 5 bottles sold by {0} in January {1}\".format(group, year)),\n",
     "                      row=1, col=index+1)\n",
     "\n",
     "    fig.show()"
