--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "4                0.30                 0.07  2022      1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "             dtype='float64')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "      dtype='object', length=444)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "           dtype='int64')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1871,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1906,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8703,7 +8703,7 @@
    "source": [
     "## Rekomendasi\n",
     "\n",
-    "Jika perusahaan mengikuti rekomendasi Data Analyst, maka perusahaan melayani pasar dengan nilai sebesar $679,000 pada bulan Januari 2022.\n",
+    "Jika perusahaan mengikuti rekomendasi Data Analyst, maka perusahaan dapat melayani pasar dengan nilai sebesar $679,000 pada bulan Januari 2022.\n",
     "\n",
     "Nilai pasar dihitung sebagai berikut:\n",
     "```\n",
