--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -8719,7 +8719,7 @@
     "\n",
     "1. Kota yang perusahaan harus pilih adalah Des Moines jika ingin berada pada 8.55% pasar.\n",
     "2. Ukuran botol minuman beralkohol yang harus disediakan perusahaan adalah 750 ml, 1750 ml, 375 ml dan 1000 ml jika ingin melayani 89.23% pasar.\n",
-    "3. Kategori minuman beralkohol yang harus disediakan perusahaan adalah American Vodkas, Canadian Whiskies, Spiced Rum, Straight Bourbon Whiskies, dan Whieskey Liquer jika ingin melayani 49.2% pasar.\n",
+    "3. Kategori minuman beralkohol yang harus disediakan perusahaan adalah American Vodkas, Canadian Whiskies, Spiced Rum, Straight Bourbon Whiskies, dan Whiskey Liquer jika ingin melayani 49.2% pasar.\n",
     "4. Promo yang harus dijalankan untuk menarik pelanggan dari kompetitor adalah \"Min. Belanja $100\" atau \"Min. Volume 6 Liter\""
    ]
   }
