--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -60,9 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Penjabaran Masalah\n",
-    "\n",
-    "#TODO penjabaran masalah"
+    "## Penjabaran Masalah"
    ]
   },
   {
@@ -191,7 +189,7 @@
    "source": [
     "## DataFrame.head()\n",
     "\n",
-    "#TODO drop columns\n",
+    "drop columns\n",
     "- [x] can't be visualized nor answer 'Penjabaran Masalah'\n",
     "  `store_number`, `store_name`, `address`, `store_location`, `vendor_number`, `vendor_name`, `item_number`, `item_description`\n",
     "- too big to derive conclusion from\n",
@@ -199,7 +197,7 @@
     "- duplicated columns\n",
     "  `volume_sold_gallons`\n",
     "\n",
-    "#TODO DataFrame.sort_values() \n",
+    "DataFrame.sort_values() \n",
     "- [x] by column `date`"
    ]
   },
@@ -691,7 +689,7 @@
    "source": [
     "## DataFrame.describe()\n",
     "\n",
-    "#TODO detecting and treating outliers on columns\n",
+    "detecting and treating outliers on columns\n",
     "\n",
     "- [x] year 2018\n",
     "  - columns 'pack', 'bottle_volume_ml', 'state_bottle_cost', 'state_bottle_retail', 'bottles_sold', 'sale_dollars', 'volume_sold_liters'\n",
@@ -766,7 +764,7 @@
    "source": [
     "## DataFrame.info()\n",
     "\n",
-    "#TODO handle null rows on columns\n",
+    "handle null rows on columns\n",
     "\n",
     "range index: 373231 entries\n",
     "- [x] remove null due to categorical data\n",
@@ -1340,8 +1338,6 @@
    "source": [
     "### Ask Instructor\n",
     "\n",
-    "#TODO ask instructor\n",
-    "\n",
     "reference: https://www.quora.com/Is-it-bad-to-delete-statistical-outliers\n",
     "\n",
     "- [x] Is it true in Machine Learning, it is always a requirement to remove the outliers? If so, should we remove natural outliers or do mean/median imputation in column `bottle_volume_ml`?\n",
@@ -1377,7 +1373,6 @@
    "source": [
     "### Ask Instructor\n",
     "\n",
-    "#TODO ask instructor\n",
     "- [x] after 1st outliers treatment, what should we do if the outliers percentage still above 0.3%?\n",
     "  - it's okay."
    ]
@@ -1862,8 +1857,6 @@
    "metadata": {},
    "source": [
     "### Ask Instructor\n",
-    "\n",
-    "#TODO ask instructor\n",
     "\n",
     "- [x] should we remove rows based on condition (a column with categorical data is null)?\n",
     "  - it's okay to drop it."
